DOC-2026: ai.adoc
Copy-edits for verb-pronoun number agreement

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -56,7 +56,7 @@ The response should be in HTML format.
 The response should preserve any HTML formatting…
 ----
 
-This added string both improves the UX and increases the response accuracy.
+This added string both improve the UX and increase the response accuracy.
 
 However, these added strings do increase overall token use.
 ====
