DOC-2026: ai.adoc
Removed filler word.

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -58,7 +58,7 @@ The response should preserve any HTML formatting…
 
 These added strings both improve the UX and increase the response accuracy.
 
-However, these added strings do increase overall token use.
+However, these added strings do increase token use.
 ====
 
 == Using a proxy server with {pluginname}
