DOC-2026: ai_shortcuts.adoc
Typo correction: s/meny/menu/.

--- a/modules/ROOT/partials/configuration/ai_shortcuts.adoc
+++ b/modules/ROOT/partials/configuration/ai_shortcuts.adoc
@@ -72,7 +72,7 @@ tinymce.init({
 
 === Example: disabling `ai_shortcuts`
 
-To disable the AI Assistant shortcuts meny and toolbar options, set `ai_shortcuts` to `false` (or to `+[]+`, an empty array).
+To disable the AI Assistant shortcuts menu and toolbar options, set `ai_shortcuts` to `false` (or to `+[]+`, an empty array).
 
 [source,js]
 ----
