--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,7 +405,7 @@
 **** xref:6.6-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 **** xref:6.6-release-notes.adoc#improvements[Improvements]
 **** xref:6.6-release-notes.adoc#additions[Additions]
-**** xref:6.6-release-notes.adoc#change[Change]
+**** xref:6.6-release-notes.adoc#changes[Changes]
 **** xref:6.6-release-notes.adoc#bug-fixes[Bug fixes]
 *** TinyMCE 6.5.1
 **** xref:6.5.1-release-notes.adoc#overview[Overview]
