Pluralised as required.
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -15,7 +15,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
 * xref:improvements[Improvements]
 * xref:additions[Additions]
-* xref:change[Change]
+* xref:changes[Changes]
 * xref:bug-fixes[Bug fixes]
 
 
