Presentation edits to the code-sample
Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/partials/configuration/dialog_streamContent.adoc
+++ b/modules/ROOT/partials/configuration/dialog_streamContent.adoc
@@ -29,12 +29,12 @@ tinymce.activeEditor.windowManager.open({
   body: {
     type: 'panel', // The root body type - a Panel or TabPanel
     items: [ // A list of panel components
-    {
-      name: 'preview',
-      type: 'iframe',
-      streamContent: 'true',
-      border: 'true',
-    }
+      {
+        name: 'preview',
+        type: 'iframe',
+        streamContent: 'true',
+        border: 'true'
+      }
     ]
     },
     buttons: [ // A list of footer buttons
