DOC-2093: 6.6-release-notes.adoc
Added known issue write-up and known-issue livery.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -17,7 +17,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 * xref:additions[Additions]
 * xref:changes[Changes]
 * xref:bug-fixes[Bug fixes]
-
+* xref:known-issue[Known issue]
 
 [[new-premium-plugin]]
 New Premium plugin
@@ -244,3 +244,12 @@ NOTE: `inline` dialogs do not support `size: 'large'`.
 Previously, when a dialog was blocking, the close button — *X* — became inactive. Pressing the *Esc* key still closed the dialog, but the close button was not available to a mouse pointer and could not be navigated to using keyboard navigation.
 
 As of {productname} 6.6 this has been corrected. A dialog’s close button now remains active and available as a tool for closing a dialog, even when the dialog is blocking.
+
+
+[[known-issue]]
+== Known issue
+
+When Safari is the host browser for a {productname} 6.6 instance running with the xref:ai.adoc[*AI Assistant*] plugin loaded, flickering of the returned text preview in the AI Assistant dialog may occasionally occur.
+
+This is a visual affect only. It does not effect *AI Assistant* functionality, nor the material being returned from the API query.
+
