--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -407,6 +407,7 @@
 **** xref:6.6-release-notes.adoc#additions[Additions]
 **** xref:6.6-release-notes.adoc#changes[Changes]
 **** xref:6.6-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:6.6-release-notes.adoc#known-issue[Known issue]
 *** TinyMCE 6.5.1
 **** xref:6.5.1-release-notes.adoc#overview[Overview]
 **** xref:6.5.1-release-notes.adoc#new-open-source-plugin[New Open Source Plugin]
