DOC_2026: ai.adoc
The correct return type of `ai_request` is void.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -38,7 +38,7 @@ tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: 'ai',
   toolbar: 'aidialog aishortcuts',
-  ai_request: (request) => new Promise()
+  ai_request: (request, respondWith) => { }
 });
 ----
 
