DOC-2026: available-menu-items.adoc
s/AI/AI Assistant/.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -49,7 +49,7 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: AI
+:pluginname: AI Assistant
 :plugincode: ai
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
