DOC-2026: available-toolbar-buttons.adoc
s/AI/AI Assistant/.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -31,7 +31,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 :plugincategory: premium
-:pluginname: AI
+:pluginname: AI Assistant
 :plugincode: ai
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
