DOC-2026: ai.adoc
Corrected :navtitle: value: s/AI/AI Assistant/.

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -1,5 +1,5 @@
 = AI Assistant plugin
-:navtitle: AI
+:navtitle: AI Assistant
 :description: Sends queries to registered AI APIs and sets the results in the document or temporarily stores the results for later use.
 :description_short: Query AI APIs and accept results.
 :keywords: plugin, ai, artificial intelligence, query, search.
