DOC-2026: ai-cmds.adoc
Corrected plugin name mention: s/AI/AI Assistant/.

--- a/modules/ROOT/partials/commands/ai-cmds.adoc
+++ b/modules/ROOT/partials/commands/ai-cmds.adoc
@@ -2,7 +2,7 @@
 |===
 |Command         |Description
 |mceAiDialog   |This command opens the AI Assistant dialog. For details, see xref:using-mceAiDialog[Using `+mceAiDialog +`].
-|mceAiDialogClose   |This command closes the AI dialog.
+|mceAiDialogClose   |This command closes the AI Assistant dialog.
 |===
 
 .Examples
