--- a/modules/ROOT/partials/configuration/ai_request.adoc
+++ b/modules/ROOT/partials/configuration/ai_request.adoc
@@ -3,9 +3,11 @@
 
 The {pluginname} uses the `+ai_request+` function to send prompts to an AI endpoint, and display the responses.
 
-The `+ai_request+` function provides the {pluginname} with either the resolved response or the error message provided by the AI endpoint.
+The `+ai_request+` function will be called each time a user submits a prompt. 
 
-The resolved response or error message is then displayed in the AI Assistant dialog.
+These prompts are only submitted with the {pluginname} dialog open, whether from typing in the dialog input field, or from using an {pluginname} shortcut.
+
+The content returned within the `+ai_request+` function is displayed within the dialog, once a response is provided.
 
 NOTE: This option is required to use the {pluginname} plugin.
 
@@ -123,4 +125,32 @@ The `+ai_request+` function is given a request object as the first parameter, wh
 ]
 ----
 
-`+thread+`:: The history of requests and responses within the dialog, provided as an array of objects. The xref:ai.adoc#thread[`+Thread+`] section describes the details of the fields in these objects.
+`+thread+`:: The history of requests and responses within the dialog, provided as an array of objects.
+
+
+=== The `respondWith` object
+
+The `+ai_request+` function provides an object containing two separate callbacks as the second parameter. These callbacks allow the integrator to choose how the response from the API will be displayed in the {pluginname} dialog.
+
+Both of these callbacks expect a `+Promise+` which indicates that the response is either finished (when resolved), or interrupted (when rejected). The return type of the promise differs between callbacks.
+
+Both callbacks provide a `signal` parameter.
+
+`+signal+`:: If the user closes the dialog, or aborts a streaming response, the `+signal+` parameter can abort the request.
+
+==== The `respondWith.string` callback
+
+The `respondWith.string` callback provides functionality for displaying the entire response from the AI. 
+
+The final response is to be returned as a string using a `+Promise+` within the `+resolve+` callback. This string will be displayed within the {pluginname} dialog.
+
+
+==== The `respondWith.stream` callback
+
+The `respondWith.stream` callback provides functionality for displaying streamed responses from the AI. 
+
+This callback expects a `+Promise+` which resolves once the AI has finished streaming the response.
+
+This callback provides `+streamMessage+` callback as the second parameter. Each new message is displayed using the `+streamMessage+` callback.
+
+`+streamMessage+`:: Takes a string and appends it to the content displayed in the {pluginname} dialog.
