DOC-2026: Refactor plugin name

--- a/modules/ROOT/pages/ai.adoc
+++ b/modules/ROOT/pages/ai.adoc
@@ -17,9 +17,9 @@ The {pluginname} allows a {productname} document to send queries to registered A
 . temporarily store the returned results for later use.
 
 [IMPORTANT]
-.On the absence of an AI Assistant demo
+.On the absence of an {pluginname} demo
 ====
-This initial release of the AI Assistant developer documentation does not include an in-page working demo.
+This initial release of the {pluginname} developer documentation does not include an in-page working demo.
 
 The logistics of setting up such a demo are still being investigated.
 
