--- a/modules/ROOT/partials/commands/ai-cmds.adoc
+++ b/modules/ROOT/partials/commands/ai-cmds.adoc
@@ -1,8 +1,8 @@
 [cols="1,3",options="header"]
 |===
-|Command         |Description
-|mceAiDialog   |This command opens the AI Assistant dialog. For details, see xref:using-mceAiDialog[Using `+mceAiDialog +`].
-|mceAiDialogClose   |This command closes the AI Assistant dialog.
+|Command            |Description
+|mceAiDialog        |This command opens the {pluginname} dialog. For details, see xref:using-mceAiDialog[Using `+mceAiDialog+`].
+|mceAiDialogClose   |This command closes the {pluginname} dialog.
 |===
 
 .Examples
