--- a/modules/ROOT/partials/events/ai-events.adoc
+++ b/modules/ROOT/partials/events/ai-events.adoc
@@ -6,6 +6,6 @@ The following events are provided by the xref:<plugincode>.adoc[<Plugin name> pl
 |AIRequest     |`+{ request: Request }+`           |Fired when a request is sent to the `+ai_request+` function.
 |AIResponse    |`+{ response: `+string+` }+`       |Fired when a `+ai_request+` Promise is resolved.
 |AIError       |`+{ error: Error | `+string+` }+`  |Fired when a `+ai_request+` Promise is rejected.
-|AIDialogOpen  |N/A    |Fired when the AI Assistant dialog is opened.
-|AIDialogClose |N/A    |Fired when the AI Assistant dialog is closed.
+|AIDialogOpen  |N/A    |Fired when the {pluginname} dialog is opened.
+|AIDialogClose |N/A    |Fired when the {pluginname} dialog is closed.
 |===
