--- a/modules/ROOT/partials/configuration/ai_shortcuts.adoc
+++ b/modules/ROOT/partials/configuration/ai_shortcuts.adoc
@@ -1,17 +1,17 @@
 [[ai_shortcuts]]
 == `ai_shortcuts`
 
-The `+ai_shortcuts+` option controls the list of AI Assistant shortcuts available in the `+AI Shortcuts+` toolbar button and menu item.
+The `+ai_shortcuts+` option controls the list of {pluginname} shortcuts available in the `+AI Shortcuts+` toolbar button and menu item.
 
-This option can be configured with an array to present a customised set of AI Assistant shortcuts.
+This option can be configured with an array to present a customised set of {pluginname} shortcuts.
 
-As well, it can be set to a `+Boolean+` value to control the use of the default list of AI Assistant shortcuts.
+As well, it can be set to a `+Boolean+` value to control the use of the default list of {pluginname} shortcuts.
 
-When not specified, or set to `+true+`, the AI Assistant shortcuts toolbar button and menu item present and display the default set of shortcuts included with the AI Assistant.
+When not specified, or set to `+true+`, the {pluginname} shortcuts toolbar button and menu item present and display the default set of shortcuts included with the {pluginname}.
 
-When set to `+[]+` (an empty array), or `+false+`, the AI Assistant shortcuts toolbar button and menu item do not present in the {productname} instance.
+When set to `+[]+` (an empty array), or `+false+`, the {pluginname} shortcuts toolbar button and menu item do not present in the {productname} instance.
 
-When configured with an instance-specific object array, the AI Assistant shortcuts toolbar button and menu item present, and display the configured shortcuts when activated.
+When configured with an instance-specific object array, the {pluginname} shortcuts toolbar button and menu item present, and display the configured shortcuts when activated.
 
 *Type:* `+Array+` of `+Objects+`, or `+Boolean+`
 
@@ -47,7 +47,7 @@ When configured with an instance-specific object array, the AI Assistant shortcu
 NOTE: The default shortcuts are subject to change in an upcoming release. If you intend to keep these shortcuts, include them within your integration.
 
 
-=== Example: using `ai_shortcuts` to present a customised set of AI Assistant shortcuts
+=== Example: using `ai_shortcuts` to present a customised set of {pluginname} shortcuts
 
 [source,js]
 ----
@@ -74,7 +74,7 @@ tinymce.init({
 
 === Example: disabling `ai_shortcuts`
 
-To disable the AI Assistant shortcuts menu and toolbar options, set `ai_shortcuts` to `false` (or to `+[]+`, an empty array).
+To disable the {pluginname} shortcuts menu and toolbar options, set `ai_shortcuts` to `false` (or to `+[]+`, an empty array).
 
 [source,js]
 ----
@@ -91,3 +91,17 @@ tinymce.init({
   ai_shortcuts: []
 });
 ----
+
+=== Valid Shortcuts
+
+Valid shortcut objects contain the following fields.
+
+`+title+`:: A string which is displayed in the `+aishortcuts+` toolbar button and menu item. This will indicate which shortcut is used, or which category of shortcuts are in this menu.
+
+And either
+
+`+prompt+`:: A string containing the query which is given to the `+ai_request+` function when the shortcut is used.
+
+or
+
+`+subprompts+`:: An array containing more valid shortcut objects. This allows shortcuts to be grouped into categories within the {pluginname} shortcuts toolbar button and menu item.
