DOC-2026: premium-plugins.adoc
Edited AI Assistant description to emphasise what temporary storage of returned results accomodates.

--- a/modules/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/modules/ROOT/partials/index-pages/premium-plugins.adoc
@@ -37,7 +37,7 @@ a|
 [.lead]
 xref:ai.adoc[AI Assistant]
 
-Send queries to registered AI APIs and set the results in the document or temporarily stores the results for later use.
+Send queries to registered AI APIs and set the results in the document or temporarily stores the results for use in the current document.
 
 a|
 [.lead]
