DOC-2093: 6.6-release-notes.adoc
Edited AI Assistant introductory text to emphasise the temporary nature of response storage.

--- a/modules/ROOT/pages/6.6-release-notes.adoc
+++ b/modules/ROOT/pages/6.6-release-notes.adoc
@@ -28,8 +28,8 @@ The following new Premium plugin was released alongside {productname} 6.6.
 
 The new Premium plugin, **AI Assistant**, allows a {productname} document to send queries to registered AI APIs and either:
 
-. add the returned results to a document; or
-. temporarily store the returned results for later use.
+. immediately add the returned results to a document; or
+. temporarily store the returned results for later use in the currently active {productname} instance.
 
 For information on **AI Assistant**, see xref:ai.adoc[AI Assistant].
 
